--- a/app/src/main/res/layout/activity_penyesuain.xml
+++ b/app/src/main/res/layout/activity_penyesuain.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".modules.sparepart.Penyesuain_Activity">
+    tools:context=".modules.sparepart.AturPenyesuain_StockOpname_Activity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -159,6 +159,7 @@
                         android:hint="USER SAKSI"
                         android:maxLength="10"
                         android:singleLine="true"
+                        android:enabled="false"
                         android:textSize="14sp" />
 
                 </android.support.design.widget.TextInputLayout>
