--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -262,6 +262,8 @@
         <item>TRANSFER</item>
         <item>DEBIT</item>
         <item>KREDIT</item>
+        <item>E-PAY</item>
+        <item>INVOICE</item>
     </string-array>
 
     <string-array name="aktivitas_usaha">
