--- a/app/src/main/res/layout/activity_list_basic.xml
+++ b/app/src/main/res/layout/activity_list_basic.xml
@@ -27,8 +27,7 @@
             android:layout_height="wrap_content"
             android:scrollbars="vertical"
             android:scrollingCache="true"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="20dp"/>
+            android:layout_marginTop="10dp" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView2"
@@ -36,7 +35,6 @@
             android:layout_height="wrap_content"
             android:scrollbars="vertical"
             android:scrollingCache="true"
-            android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"/>
 
     </LinearLayout>
