--- a/app/src/main/res/layout/activity_form_login.xml
+++ b/app/src/main/res/layout/activity_form_login.xml
@@ -71,6 +71,7 @@
             android:fillViewport="true">
 
             <RelativeLayout
+                android:background="@color/colorPrimary"
                 android:id="@+id/email_login_form"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -84,11 +85,13 @@
                     android:orientation="vertical">
 
                     <android.support.design.widget.TextInputLayout
+                        android:textColor="@android:color/white"
                         android:id="@+id/tl_user"
-                        android:layout_width="match_parent"
+                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
                         <AutoCompleteTextView
+                            android:textColor="@android:color/white"
                             android:id="@+id/user"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -96,16 +99,21 @@
                             android:inputType="phone"
                             android:maxLength="20"
                             android:maxLines="1"
-                            android:singleLine="true" />
+                            android:singleLine="true" >
+
+                            <requestFocus/>
+                        </AutoCompleteTextView>
 
                     </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
+
+                        android:visibility="invisible"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
                         <EditText
-                            android:id="@+id/password"
+                             android:id="@+id/password"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="OTP"
@@ -162,6 +170,7 @@
 
                     </LinearLayout>
                     <TextView
+                        android:visibility="invisible"
                         android:id="@+id/otp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
