--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -13,6 +13,7 @@
         android:layout_height="match_parent">
 
         <ImageView
+            android:visibility="gone"
             android:id="@+id/img_splash"
             android:layout_width="100dp"
             android:layout_height="100dp"
@@ -20,6 +21,12 @@
             android:background="@android:color/white"
             android:layout_gravity="center" />
 
+        <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/gif"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
     </FrameLayout>
 
 </android.support.design.widget.CoordinatorLayout>
